view/theme/frio/css/style.css
/* ... */
/* Notifications Page */
ul.notif-network-list li.unseen {
	background-color: #e3eff3;
}
.notif-item img.notif-image {
	height: 48px;
	width: 48px;
	border-radius: 4px;
}
.notif-item .notif-desc-wrapper {
	height: 48px;
}
.notif-item .notif-desc-wrapper a {
	height: 100%;
	display: block;
	color: $font_color_darker;
	font-size: 13px;
	font-weight: 600;
}

/* Search Page */

/* This is a little bit hacky. Since the search page is used for different
content types we can't apply the generic-page-wrapper class.
So we apply the css of the generic-page-wrapper class to the ul element with some
little modifications to emulate a standard page template */
.search-content-wrapper > ul.viewcontact_wrapper {
	min-height: calc(100vh - 150px);
	padding-top: 15px;
	padding-bottom: 20px;
	margin: 0;
	margin-bottom: 20px;
	border: none;
	background-color: rgba(255, 255, 255, $contentbg_transp);
	border-radius: 4px;
	position: relative;
	color: $font_color_darker;
	box-shadow: 0 0 3px #dadada;
	-webkit-box-shadow: 0 0 3px #dadada;
	-moz-box-shadow: 0 0 3px #dadada;
}

/* Help Page */
section.help-content-wrapper h1 {
	padding-bottom: 0.3em;
	font-size: 1.8em;
	border-bottom: 1px solid #ddd;
}
section.help-content-wrapper h2 {
	padding-bottom: 0.3em;
	font-size: 1.5em;
	border-bottom: 1px solid #ddd;
}
section.help-content-wrapper h3 {
	font-size: 1.2em;
}
section.help-content-wrapper h4 {
	font-size: 1em;
}
section.help-content-wrapper h1,
section.help-content-wrapper h2,
section.help-content-wrapper h3,
section.help-content-wrapper h4,
section.help-content-wrapper h5,
section.help-content-wrapper h6 {
	margin-top: 24px;
	margin-bottom: 16px;
	font-weight: 600;
	line-height: 1.25;
}
section.help-content-wrapper p {
	margin: 0.4em 0;
}
section.help-content-wrapper p,
section.help-content-wrapper a,
section.help-content-wrapper li {
	line-height: 1.6;
	font-size: 0.96em;
}

/*Admin Page*/
#adminpage #frio_background_image .image-select {
	display: none;
}
#adminpage #frio_background_image.input-group {
	display: block;
}
#admin-summary-wrapper {
	padding-top: 10px;
}
#adminpage ul#addonslist,
li.addon {
	list-style: none;
}
#adminpage li .icon {
	display: inline-block;
	vertical-align: text-top;
	position: relative;
	padding-left: 5px;
}
#adminpage li .icon:before {
	content: "";
	display: inline-block;
	position: absolute;
	width: 17px;
	height: 17px;
	left: 0;
	margin-left: -20px;
	margin-top: 2px;
	border: 1px solid #cccccc;
	border-radius: 3px;
	background-color: $background_color;
	-webkit-transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
	-o-transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
	transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
}
#adminpage li .icon.on:after {
	font-family: "ForkAwesome";
	content: "\f00c";
	display: inline-block;
	position: absolute;
	width: 16px;
	height: 16px;
	left: 0;
	top: 0;
	margin-left: -20px;
	margin-top: 2px;
	padding-left: 3px;
	padding-top: 1px;
	font-size: 11px;
	color: $link_color;
}
#adminpage .addon .desc {
	padding-left: 10px;
}
#admin-users #users tr.blocked {
	background-color: #f8efc0;
}
.adminpage .table-hover > tbody > tr:hover + tr.details {
	background-color: #f5f5f5;
}
.offset-anchor::before {
	display: block;
	content: " ";
	margin-top: -100px;
	height: 100px;
	visibility: hidden;
	pointer-events: none;
}

#relocate-form {
	margin-top: 5px;
}

/* Manage Page */
#identity-selector-wrapper {
	width: auto;
	height: auto;
	margin-top: 20px;
}
#identity-selector-wrapper .identity-match-photo {
	width: auto;
	float: none;
}
#identity-selector-wrapper .identity-match-photo button {
	position: relative;
}
#identity-selector-wrapper .identity-match-photo .badge {
	position: absolute;
	top: -8px;
	right: -8px;
}
#identity-selector-wrapper .identity-match-name {
	text-align: center;
}
#identity-selector-wrapper .identity-match-details {
	width: auto;
	float: none;
}

/* Register Page */
#register-openid-wrapper,
#register-name-wrapper,
#register-invite-wrapper,
#profile-publish-wrapper {
	margin-top: 20px;
}
#register-openid-end,
#register-nickname-end {
	margin-top: 40px;
}

/*
* Overwriting for transparency and other colors
*/
main .nav-tabs > li.active > a,
main .nav-tabs > li.active > a:focus,
main .nav-tabs > li.active > a:hover {
	background-color: rgba(255, 255, 255, $contentbg_transp);
}

/*
 * Modal
 */
.modal hr {
	border-color: #eee;
}

@media (min-width: 768px) {
	.modal-dialog {
		width: 650px;
	}
}

/*
 * Framework overwrite
 */

/* textcomplete for contact filtering*/
#contact-list ul.dropdown-menu.textcomplete-dropdown.media-list {
	position: relative !important;
	top: inherit !important;
	bottom: inherit !important;
	left: inherit !important;
	padding: 0;
	margin-left: -15px;
	margin-right: -15px;
	background-color: transparent;
	box-shadow: none;
	border: none;
}
#contact-list ul.dropdown-menu.textcomplete-dropdown.media-list > li {
	padding-left: 15px;
	border-bottom: 1px solid rgba(238, 238, 238, $contentbg_transp);
}
#contact-list ul.dropdown-menu.textcomplete-dropdown.media-list > li:first-child {
	display: none;
}
#contact-list ul.dropdown-menu.textcomplete-dropdown.media-list .textcomplete-item > a {
	padding: 0 !important;
	border-left: none;
	background-color: transparent !important;
}
/* this is a little hack for texcomplete contact filter
There are for some reasons empty <a> tags. I don't know why */
.textcomplete-item .contact-wrapper a {
	padding: 0;
}

/* hovercard fix */
body .tread-wrapper .hovercard a,
body .tread-wrapper .hovercard a:hover {
	color: $link_color;
}
body .tread-wrapper .hovercard:hover .hover-card-content a {
	color: $link_color !important;
}

/* Pagination improvements */
.pagination {
	text-align: center;
	display: block;
}
.pagination > li > a,
.pagination > li > span {
	color: $link_color;
	float: none;
}
.pagination > li > a:hover,
.pagination > li > span:hover {
	color: $link_hover_color;
}
/* ... */

